--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,9 @@ body {
 .img-medium {
     height: 200px;
 }
-
+#menu {
+    display:inline-block;
+    list-style: none;
+    margin:0px;
+    padding:0px; 
+}
