--- a/ui/style.css
+++ b/ui/style.css
@@ -23,5 +23,6 @@ body {
     display:inline-block;
     list-style: none;
     margin:0px;
-    padding:10px; 
+    padding-right:100px;
+    padding-left:100px;
 }
