[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -27,4 +27,6 @@ body {
     padding-left:100px;
     color: white;
     background-color: black;
+    font-family:arial black;
+    font-size:25px;
 }
