--- a/ui/style.css
+++ b/ui/style.css
@@ -23,10 +23,11 @@ body {
     display:inline-block;
     list-style: none;
     margin:0px;
-    padding-right:100px;
+    padding-right:50px;
     padding-left:100px;
     color: white;
     background-color: black;
     font-family:arial black;
     font-size:25px;
+    border-radius:5px;
 }
