[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -20,11 +20,12 @@ body {
     height: 200px;
 }
 #menu {
+    text-align: center;
     display:inline-block;
     list-style: none;
     margin:0px;
     padding-right:50px;
-    padding-left:100px;
+    padding-left:50px;
     color: white;
     background-color: black;
     font-family:arial black;
