[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-image: url(https://youtu.be/f9MrKImPrtg);
     margin-top: 75px;
 }
 
