--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-image: url(https://youtu.be/f9MrKImPrtg);
+    background-image: url(http://cdn.wallpapersafari.com/68/15/98zhkV.jpg);
     margin-top: 75px;
 }
 
