[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     background-image: url(http://cdn.wallpapersafari.com/68/15/98zhkV.jpg);
     margin-top: 75px;
-    color:white;
+    color:lightgray;
 }
 
 .center {
