[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -38,4 +38,16 @@ body {
     color:  black;
     background-color: white;
 }
+.plain-link:link {
+    text-decoration:none;
+    color:white;
+}
 
+.plain-link:hover {
+    text-decoration:none;
+    color:black;
+}
+
+.plain-link:visited {
+    text-decoration:none;
+}
