--- a/ui/style.css
+++ b/ui/style.css
@@ -35,3 +35,19 @@ body {
     border-radius:5px;
     text-decoration:none;
 }
+
+.plain-link:link {
+    text-decoration:none;
+    color:white;
+}
+
+.plain-link:hover {
+    text-decoration:none;
+    color:black;
+}
+
+.plain-link:visited {
+    text-decoration:none;
+    color:white;
+    
+}
